# xmonad-config

./: .gitignore  doug-xmonad.cabal  stack.yaml  xmobar.hs  xmonad-session-rc  xmonad.hs
