name:                doug-xmonad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ignore#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable doug-xmonad
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, xmonad, xmonad-contrib, containers, X11-xft, X11
  default-language:    Haskell2010

